# mandelbrot

./: README.md  index.backend.bkup.js  index.bkup.js  index.css  index.html  index.js  shell.nix
.direnv/: flake-profile-1-link
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
